--- a/CURSO DIO/BootCamps/TQI Fullstack Developer/menu-hambuerguer/DIO-animations-aulas-master/projeto_final/style.css
+++ b/CURSO DIO/BootCamps/TQI Fullstack Developer/menu-hambuerguer/DIO-animations-aulas-master/projeto_final/style.css
@@ -10,7 +10,7 @@ body {
 /* HEADER */
 
 .header-wrapper {
-    height: 100vh;
+    height: 50vh;
     width: 100vw;
     background: linear-gradient(-45deg, #050404, #2E1C2B, #4A1942, #893168);
     background-size: 400% 400%;
@@ -30,6 +30,8 @@ h1 {
 h2 {
     text-transform: uppercase;
     letter-spacing: 4px;
+    font-size: 2px;
+    color: #011db9;
 }
 
 .social-media {
@@ -50,10 +52,7 @@ h2 {
     transition: .5s cubic-bezier(0.55, 0.025, 0.675, 0.97);
 }
 
-a:hover {
-    color: #2E1C2B;
-    background-color: #ffffff;
-}
+
 
 @keyframes backgroundTransition {
     0% {
@@ -123,8 +122,8 @@ a:hover {
     top: 28px;
     right: 30px;
     background: transparent;
-    height: 40px;
-    width: 40px;
+    height: 50px;
+    width: 50px;
     border-radius: 50%;
     box-shadow: 0px 0px 0px 0px white;
     z-index: -1;
@@ -135,7 +134,7 @@ a:hover {
     position: fixed;
     top: 0;
     left: 0;
-    width: 100%;
+    width:100vh;
     height: 100vh;
     display: flex;
     justify-content: center;
@@ -152,7 +151,7 @@ a:hover {
 
 .menu-items ul li a{
     margin: 10px 0;
-    color: #2E1C2B;
+    color: #011db9;
     text-decoration: none;
     text-transform: uppercase;
     letter-spacing: 4px;
